--- a/3. Build a Blackjack game/11. Link to stylesheet/index.html
+++ b/3. Build a Blackjack game/11. Link to stylesheet/index.html
@@ -2,6 +2,7 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <!-- Link to the index.css file
         E.g. search for "how to link to css from html" -->
+    <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Blackjack</h1>
