--- a/3. Build a Blackjack game/12. Add basic styling/index.html
+++ b/3. Build a Blackjack game/12. Add basic styling/index.html
@@ -5,8 +5,8 @@
     <body>
         <h1>Blackjack</h1>
         <p id="message-el">Want to play a round?</p>
-        <p>Cards:</p>
-        <p>Sum:</p>
+        <p id="message-el">Cards:</p>
+        <p id="message-el">Sum:</p>
         <script src="index.js"></script>
     </body>
 </html>
